--- a/src/Sandbox/wwwroot/views/fm-single-fund-view.html
+++ b/src/Sandbox/wwwroot/views/fm-single-fund-view.html
@@ -1,14 +1,14 @@
 <section class="container-fluid section-padding background-dark" ng-init="fmSingleFund.addSeries(fmSingleFund.fund.Isin, fmSingleFund.fund.FundInfo[0].Name)">
 
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
       <h4>{{fmSingleFund.fund.FundInfo[0].Name}}</h4>
     </div>
   </div>
 
   <div class="row">
 
-    <div class="col-xs-12 col-sm-7 col-sm-offset-1">
+    <div class="col-xs-12 col-md-7 col-md-offset-1">
 
       <div class="fm-panel animated fadeIn" ng-show="fmSingleFund.chartComplete">
         <header class="fm-panel-header background-black">
@@ -96,7 +96,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
+    <!--<div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
       <div class="fm-panel animated fadeIn">
         <header class="fm-panel-header background-black">
           <h6>Innehav och fördelning</h6>
@@ -114,7 +114,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="fm-panel animated fadeIn">
