--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_font-variables.scss
@@ -31,6 +31,7 @@ $font-line-height: 1.667;
 
 // Letter Spacing
 $font-letter-spacing: 0.3rem;
+$font-letter-spacing-sm: 0.1rem;
 
 /*---------------------------
   Font-stacks:                     
