--- a/src/Sandbox/client/src/components/directives/fm-starbar-directive/fm-starbar-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-starbar-directive/fm-starbar-style.scss
@@ -1,11 +1,9 @@
 ﻿.fm-starbar {
-  margin: 0 auto;
   color: $color-text-primary-highlight;
+  margin: 0 0 0 0.25em;
   font-size: inherit;
 
-  .fill {
-    color: $color-accent;
+  &.fill {
+    color: $color-accent !important;
   }
 }
-
-
